# okf-corporate-bundle

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
bundles/acme-knowledge/: index.md  log.md
bundles/acme-knowledge-restricted/: access.md  index.md  log.md
bundles/acme-knowledge-restricted/data/: dim-account-raw.md  index.md
bundles/acme-knowledge-restricted/methods/: churn-propensity-model.md  dynamic-pricing-engine.md  index.md
bundles/acme-knowledge-restricted/patents/: index.md  us-11234567-adaptive-ingestion.md
bundles/acme-knowledge/data/: index.md
bundles/acme-knowledge/decisions/: 0001-mrr-single-source-of-truth.md  index.md
bundles/acme-knowledge/glossary/: active-account.md  index.md  mrr.md
bundles/acme-knowledge/metrics/: index.md  (+2 more)
config/: auth.yaml  ingest.yaml  resources.yaml
docs/: demo.md  inversion.md  usage.md
ingest/: ledger.yaml
src/okf_mcp/: __init__.py  auth.py  authz.py  embeddings.py  index.py  knowledge.py  parser.py  scopes.py  server.py  validator.py  writeback.py
tests/: conftest.py  test_auth.py  test_crossbundle.py  test_drive.py  test_embeddings.py  test_follow_links.py  test_generations.py  test_git_cache.py  test_ingest.py  test_knowledge.py  test_ledger.py  test_llm.py  test_package.py  test_resources.py  test_s3.py  test_scheduler.py  test_scopes.py  test_search.py  test_semantic_search.py  test_server.py  test_sparse_checkout.py  test_sync.py  test_sync_resilience.py  test_validator.py  test_vector_import.py  test_writeback.py
(+25 files in other folders)
