[project]
name = "okf-mcp"
version = "0.1.0"
description = "MCP server exposing OKF (Open Knowledge Format) bundles to AI agents, with scoped access."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6",
]

[project.scripts]
okf-validate = "okf_mcp.validator:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okf_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
